--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "diacritics": "^1.3.0",
+    "express": "^4.16.3",
+    "joi": "^13.4.0",
     "natural": "^0.6.1"
   }
 }
