--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "diacritics": "^1.3.0",
     "express": "^4.16.3",
     "joi": "^13.4.0",
-    "natural": "^0.6.1"
+    "natural": "^0.6.1",
+    "request-promise": "^4.2.2"
+  },
+  "dependencies": {
+    "request": "^2.87.0"
   }
 }
